overlays/staging/custom-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cna-covid-data
  namespace: cna-covid-data-staging
spec:
  rules:
    - host: "*.api-staging.dev.pkhamdee.com"
      http:
        paths:
          - path: /api/v1/reports.*
            backend:
              serviceName: cna-covid-data
              servicePort: 80
    - http:
        paths:
          - path: /api/v1/reports.*
            backend:
              serviceName: cna-covid-data
              servicePort: 80
